--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ html {
     scroll-behavior: smooth;
 }
 
+.added_gpmates{
+    width: 20%;
+}
+
 .btn-outline-success {
     /* margin-top: 10%;
     margin-left: 45%; */
@@ -41,9 +45,19 @@ html {
     
 }
 
+.random_text {
+    margin: 0.5%;
+    font-weight: 600;
+    font-size: 1.2em;
+}
+
+#amount {
+    width: 10%;
+}
+
 #groupmates_section {
     height: 100%;
-    padding-top: 10%;
+    /* padding-top: 10%; */
     background-image: url("https://cdn.newsday.com/polopoly_fs/1.19061459.1528497674!/httpImage/image.jpg_gen/derivatives/landscape_768/image.jpg");
     background-color: rgba(255, 165, 0, 0.5);
     background-position: center;
@@ -52,9 +66,10 @@ html {
     
 }
 
-#groupmates_div {
+.participants_actions_div {
     width: 70%;
-    height: 100%;
+    height: 80%;
+    margin-top: 10%;
     margin-left: 15%;
     box-shadow: 5px 5px 5px grey;
     /* border-top: 1px solid gray;
@@ -76,6 +91,12 @@ html {
     margin: 10px;
 }
 
+#currency {
+    margin: 1%;
+    width: 8%;
+    text-align: center;
+}
+
 #done_adding_groupmates {
     display: flex;
     justify-content: center;
@@ -85,6 +106,7 @@ html {
     background-color: rgba(255, 165, 0, 0.9);
     padding: 0.6em;
 }
+
 
 #participant_add_btn:hover {
     background-color: rgba(255, 165, 0, 0.9);
@@ -102,13 +124,31 @@ html {
     justify-content: center;
 }
 
+#transactions_div{
+    width: 96%;
+    margin: 2%;
+    /* background-color: white; */
+}
+
 #transactions_section {
     height: 100%;
+    /* padding-top: 10%; */
     background-image: url("https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fblogs-images.forbes.com%2Flearnvest%2Ffiles%2F2018%2F01%2Flv-three-friends-on-beach-tease-180117-1200x675.jpg");
-    background-color:white;
+    background-color: rgba(150,0,0,0.7);
+    /* background-color: rgb(95, 26, 26,0.7); */
     background-position: center;
     background-size: cover;
-    /* background-blend-mode: lighten; */
+    background-blend-mode: lighten;
+}
+
+#transaction_add_btn {
+    margin: 1%;
+    background-color: purple;
+}
+
+#transaction_add_btn:hover {
+    background-color: rgba(228, 0, 58, 0.6);
+    padding: 0.7em;
 }
 
 #welcome_section {
