--- a/style.css
+++ b/style.css
@@ -36,7 +36,8 @@ html {
 
 .btn-primary {
     /* margin-left: 15px; */
-    background-color: rgba(255, 110, 0, 1);
+    /* background-color: rgba(255, 110, 0, 1); */
+    background-color: rgba(255,82,12);
     border: none;
 }
 
@@ -102,6 +103,20 @@ html {
     justify-content: center;
 }
 
+#done_adding_transactions {
+    display: flex;
+    justify-content: center;
+}
+
+#done_adding_trans_btn {
+    background-color: rgba(108, 0, 158,0.9);
+}
+
+#done_adding_trans_btn:hover {
+    padding: 1%;
+    background-color: rgba(58, 0, 250, 0.65);
+}
+
 #done_adding_btn:hover {
     background-color: rgba(255, 165, 0, 0.9);
     padding: 0.6em;
@@ -124,6 +139,11 @@ html {
     justify-content: center;
 }
 
+#participants_view_btn:hover {
+    /* background-color: rgba(200,75,75); */
+    background-color: rgba(255, 165, 0, 0.9);
+}
+
 #transactions_div{
     width: 96%;
     margin: 2%;
@@ -143,12 +163,13 @@ html {
 
 #transaction_add_btn {
     margin: 1%;
-    background-color: rgba(128,0,128,0.7);
+    background-color: rgba(108, 0, 158,0.9);
 }
 
+
 #transaction_add_btn:hover {
-    background-color: rgba(58, 0, 158, 0.7);
-    padding: 0.7em;
+    background-color: rgba(58, 0, 250, 0.65);
+    padding: 1%;
 }
 
 #welcome_section {
